# Timer2

./: CMakeLists.txt  main.cpp  readme.md
include/: IRunner.hpp  IStoper.hpp  ITimer.hpp  IntervalLessThanZero.hpp  OneShotRunner.hpp  RecurrentRunner.hpp  SimpleTimer.hpp  Stoper.hpp  Timer.hpp  types.hpp
src/: CMakeLists.txt  IRunner.cpp  IStoper.cpp  ITimer.cpp  IntervalLessThanZero.cpp  OneShotRunner.cpp  SimpleTimer.cpp  Stoper.cpp  Timer.cpp
test/: CMakeLists.txt  test.cpp  testOneShotRunner.cpp  testRecurrentRunner.cpp  testSimpleTimer.cpp  testTimer.cpp
